Epoch 1. Added support for Bandpass and Notch Filters.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ SET( CMAKE_INSTALL_LIBDIR lib CACHE PATH "Output directory for libraries")
 SET( CMAKE_INSTALL_PREFIX /usr)
 add_subdirectory(src)
 add_subdirectory(include)
+add_subdirectory(tools)
